Removed unused imports and debug code.